feat(findFoldersBySize)